<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArcVC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_text">Text Chatting</string>
    <string name="title_activity_video">Video Chatting</string>
    <string name="title_activity_friend_list">Contacts</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="icon">icon</string>

</resources>
